# python-itmo-mhs-course

./: .gitignore  README.md  requirements.txt
hw_1/artifacts/1.1/: result1.txt  result2.txt
hw_1/artifacts/1.2/: result1.txt  result3.txt
hw_1/artifacts/1.3/: result1.txt  result2.txt  result3.txt
hw_1/hw_1_1/: main.py
hw_1/hw_1_2/: main.py
hw_1/hw_1_3/: main.py
hw_1/test/1.1/: test.txt
hw_1/test/1.2/: test1.txt  test2.txt
hw_1/test/1.3/: test1.txt  test2.txt
hw_2/artifacts/2.1/: hw_1_1.tex  hw_2_1.tex
hw_2/artifacts/2.2/: hw_2_2.tex
hw_2/hw_2_1/: LatexGenerator.py  main.py
hw_2/hw_2_2/: main.py
hw_2/lib/: README.md  create_pip_package.md  pyproject.toml
hw_2/lib/src/simple_latex_generator/: __init__.py  latex_constants.py  latex_document.py  latex_graphics.py  latex_methods.py  latex_package.py  latex_table.py
